# open-world-agents

./: .coveragerc  .env.example  .gitignore  .gitmodules  404.html  MEDIAREF_MIGRATION_PLAN.md  OEP_0004_IMPLEMENTATION_SUMMARY.md  README.md  TODOs.md  changes.patch  conftest.py  context7.json  index.html  main.py  mcap_io.py  mkdocs.yml  objects.inv  poc.py  pyproject.toml  pytest.ini  ruff.toml  uv_wrapper.py
projects/agent/: README.md  launch.py  poc.py  pretrain.py  pyproject.toml  train.py
projects/agent/docs/: data.md  evaluation_metrics_documentation.md  event_metrics_design.md  mllms_investigation.md  optimization.md  system.md
projects/agent/misc/: intended_online_eval.md
projects/agent/scripts/: README.md  evaluate.py  evaluate.sbatch  evaluate_config.yaml  predict_example.py  pretrain.py  pretrain_config.yaml  pretrain_config_smolvlm2.yaml  pretrain_sft_training_config.yaml  pretrain_training_config.yaml  pretrain_vlm_fsl_dataset.py  sft_vlm_smol_vlm.py  temp_train.py  training_config.yaml
projects/core/: main.py  pyproject.toml  ruff.toml
projects/core/owa/: __init__.py  callable.py  listener.py  message.py  node.py  registry.py  runnable.py
projects/core/tests/: test_runnable.py
projects/data_collection/: README.md  hello.py  pyproject.toml  reader.py  recorder.py
projects/evaluation/: Dockerfile.agent  Dockerfile.evaluator  docker-compose.yml  pyproject.toml  run.py
projects/evaluation/agent/: main.py
projects/evaluation/evaluator/: main.py
projects/evaluation/shared/: models.py  protocol.py
projects/gdrive-data-management/: README.md  environment.yml  pyproject.toml
projects/gdrive-data-management/scripts/: analyze_datasets.py  analyze_datasets.sbatch  filter_datasets.py  filter_datasets.sbatch  gdrive_sync.py  gdrive_sync.sbatch  process_datasets.py  process_datasets.sbatch
projects/gdrive-data-management/website/: README.md  app.py  website.sbatch
projects/multimodal-game-agent/: README.md  abc.jsonl  pyproject.toml  train.sbatch
projects/multimodal-game-agent/agent_system/: clock.py  offline_executor.py  rate.py  setup.py
projects/multimodal-game-agent/scripts/: 00_vpt_to_owamcap.py  01_generate_queries.py  02_tokenize_queries.py  03_train_agent.py  04_evaluate.py  04_offline_evaluate.py  05_online_evaluation.py  README_SPEEDHACK.md  constants.py  delay_keyboard.py  intended_online_eval.md  intended_online_eval.py  report.jsonl  speedhack.lua  trigger_speedhack.py
projects/owa-cli/: main.py  pyproject.toml
projects/owa-cli/docs/: mcap_migration.md
projects/owa-cli/examples/: migrate_mcap_files.py  verification_example.py
projects/owa-cli/scripts/: mcap_schema_rename.py  mouse_visualization.py
projects/owa-cli/tests/: conftest.py  test_backup_utils.py  test_mcap_migrate_cli.py  test_mcap_upgrade.py  test_migrate.py  test_migrate_backup_integration.py  test_migration_system.py  test_no_api_calls.py  test_sanitize.py  test_sanitize_backup_integration.py  test_validate_command.py  test_verification_utilities.py  test_version_override_integration.py  test_version_utils.py
projects/owa-core/: main.py  pyproject.toml
projects/owa-core/examples/: video.py
projects/owa-core/scripts/: benchmark.py  client.py  decoding_server.py  decoding_server_torchcodec.py
projects/owa-core/tests/: conftest.py  test_component_access.py  test_entry_points.py  test_message_registry.py  test_message_registry_integration.py  test_message_system.py  test_message_system_integration.py  test_message_verification.py  test_messages.py  test_oep_0006_integration.py  test_plugin_discovery.py  test_plugin_spec.py  test_plugin_system.py  test_registry.py  test_std_plugin.py  test_subprocess_runner.py  test_video_io.py
projects/owa-data/: ARCHITECTURE.md  DEMO.md  FINAL_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  MODULE_ORGANIZATION.md  README.md  README_EventEncoder.md  README_NEW_PIPELINE.md  README_VLM_Integration.md  demo_owa_dataset.py  event_encoder.md  example_event_encoder.py  example_new_pipeline.py  example_processor.py  example_vla_training.py  goal.md  load_owa_for_nanovlm.py  main.py  multi_gpu_loader.py  pyproject.toml  test_all_encoders.py
projects/owa-data/configs/: gidm_paper.yaml  internvl3_5_example.yaml  internvl3_example.yaml  mcap_to_event_example.yaml  smolvlm2_example.yaml
projects/owa-data/scripts/: 00_vpt_to_owamcap.py  01_mcap_to_hf.py  01_raw_events_to_event_dataset.py  02A_event_to_fsl.py  02B_event_dataset_to_binned_dataset.py  02_event_dataset_to_binned_dataset.py  02_event_dataset_to_trajectory_dataset.py  02_event_to_fsl.py  03_binned_dataset_to_mllm_dataset.py  multi_gpu_loader.py  single_shuffle_loader.py
projects/owa-data/tests/: conftest.py  test_both_encoders.py  test_datasets.py  test_event_encoder.py  test_event_to_fsl.py  test_factorized_encoder.py  test_hierarchical_encoder.py  test_inactivity_filter.py  test_load_dataset.py  test_mcap_to_events.py  test_owa_dataset.py  test_raw_events.py  test_tokenization.py  test_transform_serialization.py  test_vlm_dataset_builder.py
projects/owa-env-example/: README.md  pyproject.toml
projects/owa-env-example/owa_env_example/: example_callable.py  example_listener.py  example_runnable.py
projects/owa-env-example/tests/: conftest.py  test_message_integration.py  test_plugin.py  test_print.py
projects/owa-env-gst/: benchmark_video_reader.py  environment.yml  environment_detail.yml  environments.yaml  main.py  pyproject.toml
projects/owa-env-gst/examples/: gst_pipeline_runner.py  main.py  run_appsink_recorder.py
projects/owa-env-gst/owa_env_gst/: __init__.py  gst_factory.py  gst_mkv_reader.py  mkv_reader.py  msg.py  recorder.py  utils.py
projects/owa-env-gst/scripts/: video_prober.py  (+3 more)
projects/owa-env-omniparser/: README.md  pyproject.toml
projects/owa-mcap-viewer/: Dockerfile  README.md  app.py  pyproject.toml  server.py  test_mediaref_functionality.py
projects/owa-mkdocstrings-handler/: README.md  demo_verbose_output.py  pyproject.toml  test_enhanced_handler.py  test_options.py
projects/owa-recorder/: pyproject.toml
(+799 files in other folders)
