[project]
name = "owa"
version = "0.1.1"
description = "Everything you need to build state-of-the-art foundation multimodal desktop agent, end-to-end."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcap-owa-support",
    "owa-core",
    "owa-env-desktop",
    "owa-env-gst",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.1",
    "mkdocs-mermaid2-plugin>=1.1.1",
]

[dependency-groups]
dev = [
    "ipython>=9.0.1",
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "ruff>=0.9.7",
    "virtual-uv>=0.1.1",
]

[tool.uv.sources]
owa-core = { path = "projects/core", editable = true }
owa-env-desktop = { path = "projects/owa-env-desktop", editable = true }
owa-env-gst = { path = "projects/owa-env-gst", editable = true }
mcap-owa-support = { path = "projects/mcap-owa-support", editable = true }

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "projects/core/tests",
    "projects/owa-env-desktop/tests",
    "projects/owa-env-gst/tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
