[project]
name = "closed-world-agents"
version = "0.1.0"
description = "Proprietary extension of https://github.com/open-world-agents/open-world-agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "owa"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.1",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-redirects>=1.2.2",
]

[dependency-groups]
dev = [
    "ipython>=9.0.1",
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "ruff>=0.9.7",
    "virtual-uv>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
