[project]
name = "closed-world-agents"
version = "0.1.0"
description = "Proprietary extension of https://github.com/open-world-agents/open-world-agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent",
    "owa",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-subtests>=0.13.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.9.7",
    "virtual-uv>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.sources]
owa = { path = "open-world-agents", editable = true }
agent = { path = "projects/agent", editable = true }
