[project]
name = "agent"
version = "0.1.0"
description = "Minimal training"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "lightning>=2.5.2",
    "litgpt[extra]",
    "num2words>=0.5.14",
    "owa-core>=0.5.3",
    "owa-data>=0.1.0",
    "owa-msgs>=0.5.3",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
owa-data = { path = "../../open-world-agents/projects/owa-data" }
litgpt = { git = "https://github.com/Lightning-AI/litgpt" }

[project.scripts]
agent = "agent.__main__:main"
