[project]
name = "owa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygetwindow>=0.0.9 ; sys_platform == 'Windows'",
    "pyobjc-framework-Quartz; sys_platform == 'Darwin'",
    "pyobjc-framework-ApplicationServices; sys_platform == 'Darwin'",
    "pynput>=1.7.7",
    "bettercam>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
