[project]
name = "data-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcap-owa-support",
    "orjson>=3.10.15",
    "owa-core",
    "owa-env-desktop",
    "owa-env-gst",
    "typer>=0.15.1",
]

[tool.uv.sources]
owa-core = { path = "../core", editable = true }
owa-env-desktop = { path = "../owa-env-desktop", editable = true }
owa-env-gst = { path = "../owa-env-gst", editable = true }
mcap-owa-support = { path = "../mcap-owa-support", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
recorder = "data_collection.cli.recorder:app"
