[project]
name = "gdrive-data-management"
version = "0.1.0"
description = "Tools for managing and processing OWA game datasets from Google Drive"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "mcap-owa-support",
    "owa-cli",
    "owa-msgs",
    "Flask==2.3.3",
    "Werkzeug==2.3.7",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "itsdangerous==2.1.2",
    "click==8.1.7",
]
