[project]
name = "owa-cli"
version = "0.6.2"
description = "Command-line tools for Open World Agents data analysis and management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "mcap-owa-support==0.6.2",
    "mediaref~=0.3.1",
    "orjson",
    "owa-core==0.6.2",
    "owa-msgs==0.6.2",
    "packaging>=20.0",
    "plotext",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.32.2",
    "rich",
    "tqdm",
    "typer",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }
mcap-owa-support = { path = "../mcap-owa-support", editable = true }
owa-msgs = { path = "../owa-msgs", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[project.scripts]
owl = "owa.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
