[project]
name = "owa-core"
version = "0.3.9.post1"
description = "Core framework and registry system for Open World Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "av>=14.4.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "importlib-metadata>=4.0.0; python_version < '3.10'",
]

# Entry point declaration for built-in std plugin
[project.entry-points."owa.env.plugins"]
std = "owa.env.std:plugin_spec"

# Entry point for mkdocstrings handler (OEP-0004)
[project.entry-points."mkdocstrings.handlers"]
envplugin = "owa.core.documentation.mkdocstrings_handler:get_handler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa", "mkdocstrings_handlers"]
