[project]
name = "owa-core"
version = "0.6.2"
description = "Core framework and registry system for Open World Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "av>=15.0",
    "loguru",
    "pydantic>=2.0",
    "griffe",
    "pyyaml>=6.0",
    "opencv-python>=4.10.0",
]

# entry points for plugin discovery
[project.entry-points."owa.env.plugins"]
std = "owa.env.plugins.std:plugin_spec"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests as requiring network access (may be slow or unreliable)",
]
