[project]
name = "owa-data"
version = "0.4.2"
description = "Data handling and dataset utilities for Open World Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "huggingface_hub>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]
