[project]
name = "owa-data"
version = "0.1.0"
description = "Data handling and dataset utilities for Open World Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0",
    "huggingface_hub>=0.30.0",
    "rich",
    "typer",
    "jsonargparse[signatures]>=4.27.7",
    "tqdm",
    "webdataset",
    "torch>=2.0",
    "orjson",
    "owa-core>=0.6.2",
    "owa-msgs>=0.6.2",
    "mcap-owa-support>=0.6.2",
    "mediaref~=0.3.1",
    "line-profiler",
    "transformers>=4.52.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests as requiring network access (may be slow or unreliable)",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }
owa-msgs = { path = "../owa-msgs", editable = true }
mcap-owa-support = { path = "../mcap-owa-support", editable = true }
