[project]
name = "owa-data"
version = "0.1.0"
description = "Data handling and dataset utilities for Open World Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0",
    "fsspec",
    "huggingface_hub>=0.30.0",
    "jsonargparse[signatures]>=4.41.0",
    "line-profiler>=4.1.0",
    "loguru",
    "mcap-owa-support>=0.6.2",
    "mediaref~=0.3.1",
    "numpy>=2.0",
    "owa-core>=0.6.2",
    "owa-msgs>=0.6.2",
    "pillow>=9.4.0",
    "pydantic>=2.0",
    "torch>=2.0",
    "tqdm",
    "transformers>=4.52.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests as requiring network access (may be slow or unreliable)",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }
owa-msgs = { path = "../owa-msgs", editable = true }
mcap-owa-support = { path = "../mcap-owa-support", editable = true }
