[project]
name = "owa-env-gst"
version = "0.6.2"
description = "High-performance GStreamer-based screen capture plugin for Open World Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "owa-core==0.6.2",
    "pillow>=9.4.0",
    "av>=15.0",
    "pygobject-stubs",
    "tqdm",
    "opencv-python>=4.10.0",
    "owa-msgs==0.6.2",
    "mediaref~=0.3.1",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }
owa-msgs = { path = "../owa-msgs", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

# entry points for plugin discovery
[project.entry-points."owa.env.plugins"]
gst = "owa.env.plugins.gst:plugin_spec"

[tool.pytest.ini_options]
testpaths = ["tests"]
