[project]
name = "owa-env-omniparser"
version = "0.1.0"
description = "OmniParser integration for Open World Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "owa-core",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0"
]

[tool.uv.sources]
owa-core = { path = "../core", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.0.267",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa_env_omniparser"] 