[project]
name = "owa-env-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "mcap-owa-support==0.3.2",
    "owa-core==0.3.2",
    "python-multipart>=0.0.20",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]
