[project]
name = "owa-mcap-viewer"
version = "0.1.0"
description = "Web-based viewer for Open World Agents MCAP files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "diskcache",
    "fastapi[standard]>=0.115.12",
    "huggingface-hub>=0.30.0",
    "jinja2",
    "mcap-owa-support>=0.6.2",
    "owa-cli>=0.6.2",
    "owa-core>=0.6.2",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "requests>=2.32.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa_viewer"]
