[project]
name = "owa-mkdocstrings-handler"
version = "0.3.9.post1"
description = "Custom mkdocstrings handler for OWA EnvPlugin components"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mkdocstrings>=0.24.0",
    "owa-core>=0.3.9",
    "griffe>=1.0.0",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mkdocstrings_handlers"]
