[project]
name = "owa-recorder"
version = "0.3.8"
description = "This is a meta-package to install OWA's Recorder."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "owa-cli",
    "owa-env-desktop",
    "owa-env-gst",
]

[tool.uv.sources]
owa-cli = { path = "../owa-cli", editable = true }
owa-env-gst = { path = "../owa-env-gst", editable = true }
owa-env-desktop = { path = "../owa-env-desktop", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[project.scripts]
record = "owa.cli.mcap.record:main"
